replaced runtime exceptions